--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 			// console.log("account: ", account);
 			// console.log("passwd: ", passwd);
 			
+			
+			var toString = product.toString();
+				// console.log("product: " + toString);
+				var strArray = toString.split(",");
+
+				var timestamp = new Date(strArray[3]*1000);
+			
 		});
 		
 		Instascan.Camera.getCameras().then(function (cameras) {
