--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 			// console.log("passwd: ", passwd);
 			
 			
-			var toString = product.toString();
-				// console.log("product: " + toString);
-				var strArray = toString.split(",");
-
-				var timestamp = new Date(strArray[3]*1000);
+			// var toString = product.toString();
+		        // console.log("product: " + toString);
+			// var strArray = toString.split(",");
+			// var address = strArray[0];
+			// var privatekey = strArray[1];
 			
 		});
 		
