--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
                       console.log(content);
 			$('#message').text( content );
 			
+			
+			// $('#fromaddress').val(privateKey);
+			// <input id="myField" type="text" name="email"/>
+      			// getting the value
+     		       // let fromaddress = $("#fromaddress").val();
+                       // setting the value
+                       // $("#fromaddress").val( "new value here" );
+                       // <h5>송신처  <input id="fromaddress" size="45" placeholder=""></input> </h5>
+			
 			// let obj = JSON.parse(content);
 			// alert("Account 입력이 됐습니다...!!!" + account );
 			// console.log("obj: ", obj);
