--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!-- 
+ index.html - Ethereum Wallet
+ Author : Soto Jang (sotolabedu@gmail.com)
+ Copyright (c) 2020 Sunstar. All Rights Reserved. See LICENSE file.
+ -->
+
 <!DOCTYPE html>
 <html>
   <head>
