--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- 
- index.html - Ethereum Wallet
+ index.html - QRSCan
  Author : Soto Jang (sotolabedu@gmail.com)
- Copyright (c) 2020 Sunstar. All Rights Reserved. See LICENSE file.
+ Copyright (c) Sunstar Since 2015. All Rights Reserved. See LICENSE file.
  -->
 
 <!DOCTYPE html>
